[2021/07/07] init index page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>IndexPage</title>
+	<script data-ad-client="ca-pub-2341732219377974" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
-    Hi~~~~~
+    IndexPage
   </body>
 </html>
