--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <title>IndexPage</title>
 	<script data-ad-client="ca-pub-2341732219377974" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     IndexPage
+	<script>
+		 $(document).ready(function () {
+			window.location.replace("https://andyshiu.github.io/SuperCryptoTools/index.html");
+        });
+	</script>
   </body>
 </html>
