--- a/index.html
+++ b/index.html
@@ -2,15 +2,51 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IndexPage</title>
+    <title>AndyShiu's Profile</title>
 	<script data-ad-client="ca-pub-2341732219377974" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	  <script  src="js/script.js"></script>
+	  <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    IndexPage
+    <!-- partial:index.partial.html -->
+	<div class="shadow overflow">
+	  <div id="header"></div>
+	  <div id="profile">
+		<div class="image">
+		<img src="img/profie.jpeg" alt="" />
+		</div>
+		<div class="name">
+		  AndyShiu
+		</div>
+		<div class="nickname">
+		  @andyshiu
+		</div>
+		<div class="location">
+		<i class="material-icons">place</i>Taiwan
+		</div>
+		
+	  </div>
+	  <br/>
+	  <div id="projects"> <font color='white' size='5'><b>Project List</b></font></div>
+	  <div id="projectList">
+		<div id="project">
+		  <div>
+			<a href="https://andyshiu.github.io/SuperCryptoTools"><font size='3' >> SuperCryptoTools</font></a>
+		  </div>
+		  <div>
+			<font size='2' >虛擬貨幣個人儀表板</font>
+		  </div>
+		  <div>
+			<hr/>
+		  </div>
+		</div>
+	  </div>
+	</div>
+	<!-- partial -->
 	<script>
 		 $(document).ready(function () {
-			window.location.replace("https://andyshiu.github.io/SuperCryptoTools/index.html");
+			//window.location.replace("https://andyshiu.github.io/SuperCryptoTools/index.html");
         });
 	</script>
   </body>
