--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<!-- partial -->
 	<script>
 		 $(document).ready(function () {
-			//window.location.replace("https://andyshiu.github.io/SuperCryptoTools/index.html");
+			window.location.replace("https://andyshiu.github.io/SuperCryptoTools/index.html");
         });
 	</script>
   </body>
